--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,8 +26,8 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/basic-math">Basic Math</a></li>
-              <li><a class="dropdown-item" href="#">Financial Interest Calculator</a></li>
-              <li><a class="dropdown-item" href="#">Days Until/Ago Calculator</a></li>
+              <li><a class="dropdown-item" href="/financial-interest-calculator">Financial Interest Calculator</a></li>
+              <li><a class="dropdown-item" href="/days-calculator">Days Until/Ago Calculator</a></li>
             </ul>
           </li>
         </ul>
