--- a/views/basic-math.ejs
+++ b/views/basic-math.ejs
@@ -1,5 +1,6 @@
 <%- include("./partials/header.ejs") %>
-<link href="/styles/basic-math.css" rel="stylesheet">
+
+    <link href="/public/styles/basic-math.css" rel="stylesheet">
     <div id="calculator-container">
         <div id="calculator">
             <input id="display" readonly>
@@ -24,5 +25,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../basic-math.js"></script>
 
 <%- include("./partials/footer.ejs") %>
