Add not yet optimized for mobile message, and adjust padding in an attempt to optimize for mobile

--- a/public/styles/basic-math.css
+++ b/public/styles/basic-math.css
@@ -18,7 +18,7 @@
 
 #display {
     width: 100%;
-    padding: 5%;
+    padding: 20px;
     font-size: 4rem;
     text-align: right;
     border: none;
