--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
             </svg>
             <h1 class="display-5 fw-bold text-body-emphasis">MultiCalculator</h1>
             <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">A basic simple online calculator with various applications.</p>
+            <p class="lead mb-4">A basic simple online calculator with various applications. <br> (Not fully optimized for mobile usage yet)</p>
             </div>
         </div>
     </div>
