--- a/public/styles/basic-math.css
+++ b/public/styles/basic-math.css
@@ -42,7 +42,7 @@ footer {
 }
 
 button {
-    width: 100px;
+    width: 100%;
     height: 100px;
     border-radius: 50px;
     border: none;
@@ -51,6 +51,7 @@ button {
     font-size: 3rem;
     font-weight: bold;
     cursor: pointer;
+    padding: 0;
 }
 
 button:hover {
