--- a/public/styles/basic-math.css
+++ b/public/styles/basic-math.css
@@ -41,14 +41,14 @@ footer {
     box-sizing: border-box;
 }
 
-button {
+#keys button {
     width: 100%;
-    height: 100px;
+    aspect-ratio: 1 / 1;
     border-radius: 50px;
     border: none;
     background-color: hsl(0, 0, 30%);
     color: white;
-    font-size: 3rem;
+    font-size: 3em;
     font-weight: bold;
     cursor: pointer;
     padding: 0;
