--- a/views/days-calculator.ejs
+++ b/views/days-calculator.ejs
@@ -1,5 +1,13 @@
 <%- include("./partials/header.ejs") %>
+<link href="/public/styles/days-calculator.css" rel="stylesheet">
 
-    <h1 style="text-align: center;">Not yet implemented</h1>
+    <form class="select-date">
+        <label for="date"><h1>Choose a date:</h1></label>
+        <input type="date" id="date" name="date">
+    </form>
 
+    <h1 class="output"></h1>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../days-calculator.js"></script>
 <%- include("./partials/footer.ejs") %>
