Change choose date message

--- a/views/days-calculator.ejs
+++ b/views/days-calculator.ejs
@@ -3,7 +3,7 @@
 
     <div class="calculator-container">
         <form class="select-date">
-            <label for="date"><h1>Choose a date:</h1></label>
+            <label for="date"><h1>Tap below to choose a date:</h1></label>
             <input type="date" id="date" name="date">
         </form>
 
