--- a/views/financial-interest-calculator.ejs
+++ b/views/financial-interest-calculator.ejs
@@ -1,5 +1,5 @@
 <%- include("./partials/header.ejs") %>
 
-    <h1 style="text-align: center;">Not yet implemented</h1>
+    <h1 style="text-align: center;">Coming Soon</h1>
     
 <%- include("./partials/footer.ejs") %>
