Add some query selectors to the javascript of financial interest calculator

--- a/views/financial-interest-calculator.ejs
+++ b/views/financial-interest-calculator.ejs
@@ -14,6 +14,11 @@
                 <option value="simple">Simple</option>
                 <option value="compound">Compound</option>
             </select>
+            <select name="duration" id="interest-duration">
+                <option value="">--Please choose the duration of interest--</option>
+                <option value="simple">Monthly</option>
+                <option value="compound">Annual</option>
+            </select>
             <br>
             <label for="interest">Interest %:</label>
             <input type="number" id="interest" min="0" max="100">
