--- a/public/styles/financial-interest-calculator.css
+++ b/public/styles/financial-interest-calculator.css
@@ -3,7 +3,7 @@ select {
 }
 
 form label {
-    margin: 0.2rem;
+    margin: 0.3rem;
 }
 
 form button {
@@ -11,5 +11,26 @@ form button {
 }
 
 form select {
-    margin: 1rem;
+    margin: 0.5rem;
+}
+
+@media (max-width: 800px) {
+    form label, form input, form select {
+        display: block;
+        margin-bottom: 0.1rem;
+        text-align: center;
+    }
+    
+    form input {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    form select {
+        width: 80%;
+        box-sizing: border-box;
+        margin-bottom: 0.5rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
